config/manager/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: operator-api
spec:
  routes:
  - match: Host("api.jdwl.in")
    kind: Rule
    services:
    - name: operator-api
      port: 9876

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: operator-api
  name: operator-api
spec:
  ports:
  - name: http
    port: 9876
    protocol: TCP
    targetPort: 9876
  selector:
    control-plane:  controller-manager
status: {}
